v2 行李清單微調

--- a/行李清單.html
+++ b/行李清單.html
@@ -59,61 +59,61 @@
                 style="font-size:larger; background-color: rgba(255, 255, 255, 0.9);">
                 <legend><i class="bi bi-luggage me-3"></i>旅行相關</legend>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">護照</label>
+                    <input class="form-check-input list-item" type="checkbox" id="passport">
+                    <label class="form-check-label" for="passport">護照</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">簽證</label>
+                    <input class="form-check-input list-item" type="checkbox" id="visa">
+                    <label class="form-check-label" for="visa">簽證</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">兩吋照片</label>
+                    <input class="form-check-input list-item" type="checkbox" id="photo">
+                    <label class="form-check-label" for="photo">兩吋照片</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">行李束帶</label>
+                    <input class="form-check-input list-item" type="checkbox" id="luggagestraps">
+                    <label class="form-check-label" for="luggagestraps">行李束帶</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">旅行袋</label>
+                    <input class="form-check-input list-item" type="checkbox" id="travelbag">
+                    <label class="form-check-label" for="travelbag">旅行袋</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">頸枕</label>
+                    <input class="form-check-input list-item" type="checkbox" id="neckpillow">
+                    <label class="form-check-label" for="neckpillow">頸枕</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">鎖頭</label>
+                    <input class="form-check-input list-item" type="checkbox" id="lock">
+                    <label class="form-check-label" for="lock">鎖頭</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">行李秤</label>
+                    <input class="form-check-input list-item" type="checkbox" id="luggagescale">
+                    <label class="form-check-label" for="luggagescale">行李秤</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">耳塞
+                    <input class="form-check-input list-item" type="checkbox" id="earplugs">
+                    <label class="form-check-label" for="earplugs">耳塞
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">眼罩</label>
+                    <input class="form-check-input list-item" type="checkbox" id="eyepatch">
+                    <label class="form-check-label" for="eyepatch">眼罩</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">行程 / 飯店確證單節圖</label>
+                    <input class="form-check-input list-item" type="checkbox" id="confirmation">
+                    <label class="form-check-label" for="confirmation">行程 / 飯店確證單節圖</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">國際駕照</label>
+                    <input class="form-check-input list-item" type="checkbox" id="internationaldrivingpermit">
+                    <label class="form-check-label" for="internationaldrivingpermit">國際駕照</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">外幣</label>
+                    <input class="form-check-input list-item" type="checkbox" id="foreigncurrency">
+                    <label class="form-check-label" for="foreigncurrency">外幣</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">網卡</label>
+                    <input class="form-check-input list-item" type="checkbox" id="networkcard">
+                    <label class="form-check-label" for="networkcard">網卡</label>
                 </div>
             </fieldset>
         </div>
@@ -122,48 +122,48 @@
                 style="font-size: larger; background-color: rgba(255, 255, 255, 0.9);">
                 <legend><i class="bi bi-handbag me-3"></i>基本物品</legend>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">隨身包</label>
+                    <input class="form-check-input list-item" type="checkbox" id="carryonbag">
+                    <label class="form-check-label" for="carryonbag">隨身包</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">信用卡</label>
+                    <input class="form-check-input list-item" type="checkbox" id="creditcard">
+                    <label class="form-check-label" for="creditcard">信用卡</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">充電線</label>
+                    <input class="form-check-input list-item" type="checkbox" id="chargingcable">
+                    <label class="form-check-label" for="chargingcable">充電線</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">行動電源</label>
+                    <input class="form-check-input list-item" type="checkbox" id="powerbank">
+                    <label class="form-check-label" for="powerbank">行動電源</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">萬用插座</label>
+                    <input class="form-check-input list-item" type="checkbox" id="universaladapter">
+                    <label class="form-check-label" for="universaladapter">萬用轉接頭</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">眼鏡 / 隱形眼鏡</label>
+                    <input class="form-check-input list-item" type="checkbox" id="glasses">
+                    <label class="form-check-label" for="glasses">眼鏡 / 隱形眼鏡</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">化妝品 / 保養品</label>
+                    <input class="form-check-input list-item" type="checkbox" id="cosmetic">
+                    <label class="form-check-label" for="cosmetic">化妝品 / 保養品</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">防曬</label>
+                    <input class="form-check-input list-item" type="checkbox" id="sunprotection">
+                    <label class="form-check-label" for="sunprotection">防曬</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">雨傘</label>
+                    <input class="form-check-input list-item" type="checkbox" id="umbrella">
+                    <label class="form-check-label" for="umbrella">雨傘</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">水壺</label>
+                    <input class="form-check-input list-item" type="checkbox" id="kettle">
+                    <label class="form-check-label" for="kettle">水壺</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">藥品</label>
+                    <input class="form-check-input list-item" type="checkbox" id="medicine">
+                    <label class="form-check-label" for="medicine">藥品</label>
                 </div>
             </fieldset>
         </div>
@@ -172,52 +172,52 @@
                 style="font-size: larger; background-color: rgba(255, 255, 255, 0.9);">
                 <legend><i class="bi bi-person me-3"></i>衣物與盥洗用品</legend>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">上衣</label>
+                    <input class="form-check-input list-item" type="checkbox" id="jacket">
+                    <label class="form-check-label" for="jacket">上衣</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">褲子 / 裙</label>
+                    <input class="form-check-input list-item" type="checkbox" id="pants">
+                    <label class="form-check-label" for="pants">褲子 / 裙</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">布鞋 / 拖鞋</label>
+                    <input class="form-check-input list-item" type="checkbox" id="shoes">
+                    <label class="form-check-label" for="shoes">布鞋 / 拖鞋</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">外套</label>
+                    <input class="form-check-input list-item" type="checkbox" id="coat">
+                    <label class="form-check-label" for="coat">外套</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">襪子</label>
+                    <input class="form-check-input list-item" type="checkbox" id="sock">
+                    <label class="form-check-label" for="sock">襪子</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">飾品</label>
+                    <input class="form-check-input list-item" type="checkbox" id="accessories">
+                    <label class="form-check-label" for="accessories">飾品</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">牙膏 / 牙刷</label>
+                    <input class="form-check-input list-item" type="checkbox" id="tooth">
+                    <label class="form-check-label" for="tooth">牙膏 / 牙刷</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">洗面乳</label>
+                    <input class="form-check-input list-item" type="checkbox" id="facialcleanser">
+                    <label class="form-check-label" for="facialcleanser">洗面乳</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">洗 / 潤髮乳</label>
+                    <input class="form-check-input list-item" type="checkbox" id="shampoo">
+                    <label class="form-check-label" for="shampoo">洗 / 潤髮乳</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">沐浴乳</label>
+                    <input class="form-check-input list-item" type="checkbox" id="showergel">
+                    <label class="form-check-label" for="showergel">沐浴乳</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">毛巾</label>
+                    <input class="form-check-input list-item" type="checkbox" id="towel">
+                    <label class="form-check-label" for="towel">毛巾</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input list-item" type="checkbox">
-                    <label class="form-check-label" for="checkDefault">梳子</label>
+                    <input class="form-check-input list-item" type="checkbox" id="comb">
+                    <label class="form-check-label" for="comb">梳子</label>
                 </div>
             </fieldset>
         </div>
