--- a/小專題v2.html
+++ b/小專題v2.html
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a href="https://www.kyoto-nishiki.or.jp/" target="_blank"><img src="./img/錦市場.png"
+                        <a href="https://www.kyoto-nishiki.or.jp/" target="_blank"><img src="./img/錦市場2.jpg"
                                 alt="錦市場"></a>
                         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
                             <h5>錦市場</h5>
@@ -226,7 +226,7 @@
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./img/交通/HARUKA.png" class="card-img-top" alt="HARUKA">
+                        <img src="./img/交通/HARUKA2.jpg" class="card-img-top" alt="HARUKA">
                         <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">HARUKA</h5>
                             <a href="https://www.westjr.co.jp/global/tc/travel/shopping/access/train.html" class="btn btn-outline-primary" target="_blank">go</a>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./img/交通/KIX 機場巴士.png" class="card-img-top" alt="KIX 機場巴士">
+                        <img src="./img/交通/KIX 機場巴士2.jpg" class="card-img-top" alt="KIX 機場巴士">
                         <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">KIX 機場巴士</h5>
                             <a href="https://www.kate.co.jp/tcn/timetable/detail/KY" class="btn btn-outline-primary" target="_blank">go</a>
@@ -244,16 +244,16 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./img/交通/京都市地下鐵.png" class="card-img-top" alt="京都市地下鐵">
+                        <img src="./img/交通/京都火車.jpg" class="card-img-top" alt="京都市地下鐵">
                         <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                            <h5 class="card-title">京都市地下鐵</h5>
+                            <h5 class="card-title">京都火車</h5>
                             <a href="https://www2.city.kyoto.lg.jp/kotsu/tikadia/tikatime.htm" class="btn btn-outline-primary" target="_blank">go</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./img/交通/京都市巴士.png" class="card-img-top" alt="京都市巴士">
+                        <img src="./img/交通/京都市巴士2.jpg" class="card-img-top" alt="京都市巴士">
                         <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">京都市巴士</h5>
                             <a href="https://www2.city.kyoto.lg.jp/kotsu/busdia/bustime.htm" class="btn btn-outline-primary" target="_blank">go</a>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./img/交通/京都巴士.jpg" class="card-img-top" alt="京都巴士">
+                        <img src="./img/交通/京都巴士2.jpg" class="card-img-top" alt="京都巴士">
                         <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">京都巴士</h5>
                             <a href="https://www.kyotobus.jp/route/index.html" class="btn btn-outline-primary" target="_blank">go</a>
@@ -271,7 +271,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./img/交通/JR西日本.png" class="card-img-top" alt="JR西日本">
+                        <img src="./img/交通/JR2.jpg" class="card-img-top" alt="JR西日本">
                         <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">JR西日本</h5>
                             <a href="https://www.train-guide.westjr.co.jp/area_kinki.html" class="btn btn-outline-primary" target="_blank">go</a>
@@ -330,7 +330,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./img/景點/伏見稻荷大社.jpg" class="card-img-top" alt="伏見稻荷大社">
+                        <img src="./img/景點/伏見稻荷大社2.jpg" class="card-img-top" alt="伏見稻荷大社">
                         <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                             <h5 class="card-title">伏見稻荷大社</h5>
                             <a href="https://inari.jp/" class="btn btn-outline-success" target="_blank">go</a>
