根目錄修改

--- a/小專題v2.html
+++ b/小專題v2.html
@@ -7,13 +7,13 @@
     <title>小專題_改</title>
     <!--網頁icon-->
     <link rel="icon" href="/img/files.svg">
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./小專題v2.css">
     <script src="./小專題v2.js"></script>
     <script src="./楓葉背景.js"></script>
     <link rel="stylesheet" href="./楓葉背景.css">
-    <script src="../js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 </head>
 
 <body>
@@ -30,11 +30,11 @@
                 <div class="collapse navbar-collapse" id="navbarSupported">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/行李清單.html">行李清單</a>
+                            <a class="nav-link active" aria-current="page" href="./行李清單.html">行李清單</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/常用會話.html">常用會話</a>
+                            <a class="nav-link active" aria-current="page" href="./常用會話.html">常用會話</a>
                         </li>
                     </ul>
                 </div>
@@ -193,7 +193,7 @@
             <div class="card col cols-md-3 m-3 g-4" style="max-width: max-content;">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="/img/飯店" class="img-fluid rounded-start" alt="飯店">
+                        <img src="./img/飯店" class="img-fluid rounded-start" alt="飯店">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
