--- a/常用會話.html
+++ b/常用會話.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>常用會話</title>
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <script src="../js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 
     <style>
         body {
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/行李清單.html">行李清單</a>
+                        <a class="nav-link active" aria-current="page" href="./行李清單.html">行李清單</a>
                     </li>
                 </ul>
             </div>
