v2-4 賞楓更改高度

--- a/常用會話.html
+++ b/常用會話.html
@@ -111,7 +111,7 @@
                     <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse"
                         data-bs-target="#taxfree">請問可以免稅嗎？</button>
                     <hr>
-                    <div id="howmuch" class="collapse" data-bs-parent="#buy">これはいくらですか？ <br> Kore wa ikura desu ka</div>
+                    <div id="howmuch" class="collapse" data-bs-parent="#buy">これはいくらですか <br> Kore wa ikura desu ka</div>
                     <div id="look" class="collapse" data-bs-parent="#buy">見てもいいですか <br> Mite mo ii desu ka</div>
                     <div id="haveproduce" class="collapse" data-bs-parent="#buy">これがありますか <br> Kore ga arimasu ka</div>
                     <div id="whatisthis" class="collapse" data-bs-parent="#buy">これは何ですか <br> Kore wa nan desu ka</div>
