--- a/行李清單.html
+++ b/行李清單.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/list-task.svg">
+    <link rel="icon" href="./img/list-task.svg">
     <title>行李清單</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
     <script src="./js/bootstrap.bundle.js"></script>
