--- a/小專題v2.html
+++ b/小專題v2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小專題_改</title>
     <!--網頁icon-->
-    <link rel="icon" href="/img/files.svg">
+    <link rel="icon" href="./img/files.svg">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./小專題v2.css">
@@ -348,9 +348,9 @@
                 </div>
             </div>
         </div>
-        <!-- 空白內容 -->
+        <!-- 賞楓 -->
         <div id="non-content" class="content-item">
-            <br><br><br><br><br><br><br><br>
+            <div class="body" style="height: 1000px;"></div>
         </div>
     </div>
 
